some file & code added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My_assignment</title>
-</head>
-<body>
-    
-</body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <header>
+        <div class="header-container">
+            <div class="nav">
+                <h2 class="logo">Mars</h2>
+                <button class="btn-1 signup primary-color">Sign Up</button>
+            </div>
+            <div class="header-content">
+                <h1 class="title">Cool Dark UI Template for <br> Webflow Agencies!</h1>
+                <button class="primary-color btn-2">Stay Focused</button>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section>
+            <div class="content">
+                <h2>See It in Action</h2>
+                <p>Explore the live preview and imagine your <br> brand in this bold new look.</p>
+                <button class="primary-color">Launch Live Preview</button>
+            </div>
+            <div class="image">
+                <img src="" alt="">
+            </div>
+        </section>
+    </main>
+  </body>
 </html>
