--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
         </div>
     </header>
     <main>
-        <section>
+        <section class="section1">
             <div class="content">
-                <h2>See It in Action</h2>
+                <h2 class="title section-title">See It in Action</h2>
                 <p>Explore the live preview and imagine your <br> brand in this bold new look.</p>
                 <button class="primary-color">Launch Live Preview</button>
             </div>
             <div class="image">
-                <img src="" alt="">
+                <img class="section1-image" src="Assets/wc-mini.png" alt="">
             </div>
         </section>
     </main>
