--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                 <img class="section1-image" src="Assets/wc-mini.png" alt="">
             </div>
         </section>
+        <section class="section2">
+            <h2 class="title section-title2">Joined Thousands of Productive Users</h2>
+        </section>
     </main>
   </body>
 </html>
