I'm adding some more code

--- a/index.html
+++ b/index.html
@@ -38,6 +38,20 @@
         </section>
         <section class="section2">
             <h2 class="title section-title2">Joined Thousands of Productive Users</h2>
+            <div class="section2-content">
+                <div class="summary">
+                    <h1 class=>50K</h1>
+                    <p>Active Users</p>
+                </div>
+                <div class="summary">
+                    <h1 class=>2M+</h1>
+                    <p>Focus Sessions</p>
+                </div>
+                <div class="summary">
+                    <h1 class=>95%</h1>
+                    <p>Satisfaction Rate</p>
+                </div>
+            </div>
         </section>
     </main>
   </body>
