--- a/index.html
+++ b/index.html
@@ -53,6 +53,65 @@
                 </div>
             </div>
         </section>
+        <section class="section3">
+            <h2 class="title card-title">What our users say</h2>
+            <div class="card-section">
+                <div class="card">
+                <div>
+                <span><img src="Assets/icon-star.png" alt=""></span>
+                <span><img src="Assets/icon-star.png" alt=""></span>
+                <span><img src="Assets/icon-star.png" alt=""></span>
+                <span><img src="Assets/icon-star.png" alt=""></span>
+                <span><img src="Assets/icon-star.png" alt=""></span>
+                </div>
+                <h4>Loved by Designers</h4>
+                <p>This template instantly leveled up our <br> presence.” – Studio Vertex</p>
+                <div class="tricky">
+                    <span><img src="/Assets/avatar.png" alt=""></span>
+                    <div class="easy">
+                        <h5 class="card-subtitle">Reviewer name</h5>
+                        <h6>Date</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div>
+                <span><img src="Assets/icon-star.png" alt=""></span>
+                <span><img src="Assets/icon-star.png" alt=""></span>
+                <span><img src="Assets/icon-star.png" alt=""></span>
+                <span><img src="Assets/icon-star.png" alt=""></span>
+                <span><img src="Assets/icon-star.png" alt=""></span>
+                </div>
+                <h4>Loved by Designers</h4>
+                <p>This template instantly leveled up our <br> presence.” – Studio Vertex</p>
+                <div class="tricky">
+                    <span><img src="/Assets/avatar.png" alt=""></span>
+                    <div class="easy">
+                        <h5 class="card-subtitle">Reviewer name</h5>
+                        <h6>Date</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div>
+                <span><img src="Assets/icon-star.png" alt=""></span>
+                <span><img src="Assets/icon-star.png" alt=""></span>
+                <span><img src="Assets/icon-star.png" alt=""></span>
+                <span><img src="Assets/icon-star.png" alt=""></span>
+                <span><img src="Assets/icon-star.png" alt=""></span>
+                </div>
+                <h4>Loved by Designers</h4>
+                <p>This template instantly leveled up our <br> presence.” – Studio Vertex</p>
+                <div class="tricky">
+                    <span><img src="/Assets/avatar.png" alt=""></span>
+                    <div class="easy">
+                        <h5 class="card-subtitle">Reviewer name</h5>
+                        <h6>Date</h6>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
     </main>
   </body>
 </html>
