more & more coded added

--- a/index.html
+++ b/index.html
@@ -112,6 +112,12 @@
             </div>
             </div>
         </section>
+        <div class="section4">
+            <h2>Ready to focus better</h2>
+            pThis template instantly leveled up our presence.” – Studio Vertex
+            <button class="primary-color">Ger Started Free</button>
+            <img src="Assets/wc-big.png" alt="">
+        </div>
     </main>
   </body>
 </html>
