some more codes are being added

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </section>
         <div class="section4">
             <h2>Ready to focus better</h2>
-            pThis template instantly leveled up our presence.” – Studio Vertex
+            <p>This template instantly leveled up our presence.” – Studio Vertex</p>
             <button class="primary-color">Ger Started Free</button>
             <img src="Assets/wc-big.png" alt="">
         </div>
