--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h4>Loved by Designers</h4>
                 <p>This template instantly leveled up our <br> presence.” – Studio Vertex</p>
                 <div class="tricky">
-                    <span><img src="/Assets/avatar.png" alt=""></span>
+                    <img src="/Assets/avatar.png" alt="">
                     <div class="easy">
                         <h5 class="card-subtitle">Reviewer name</h5>
                         <h6>Date</h6>
@@ -85,7 +85,7 @@
                 <h4>Loved by Designers</h4>
                 <p>This template instantly leveled up our <br> presence.” – Studio Vertex</p>
                 <div class="tricky">
-                    <span><img src="/Assets/avatar.png" alt=""></span>
+                    <img src="/Assets/avatar.png" alt="">
                     <div class="easy">
                         <h5 class="card-subtitle">Reviewer name</h5>
                         <h6>Date</h6>
@@ -103,7 +103,7 @@
                 <h4>Loved by Designers</h4>
                 <p>This template instantly leveled up our <br> presence.” – Studio Vertex</p>
                 <div class="tricky">
-                    <span><img src="/Assets/avatar.png" alt=""></span>
+                    <img src="/Assets/avatar.png" alt="">
                     <div class="easy">
                         <h5 class="card-subtitle">Reviewer name</h5>
                         <h6>Date</h6>
