--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h4>Loved by Designers</h4>
                 <p>This template instantly leveled up our <br> presence.” – Studio Vertex</p>
                 <div class="tricky">
-                    <img class="control" src="/Assets/avatar.png" alt="">
+                    <img class="control" src="./Assets/avatar.png" alt="">
                     <div class="easy">
                         <h5 class="card-subtitle">Reviewer name</h5>
                         <h6>Date</h6>
@@ -85,7 +85,7 @@
                 <h4>Loved by Designers</h4>
                 <p>This template instantly leveled up our <br> presence.” – Studio Vertex</p>
                 <div class="tricky">
-                    <img class="control" src="/Assets/avatar.png" alt="">
+                    <img class="control" src="./Assets/avatar.png" alt="">
                     <div class="easy">
                         <h5 class="card-subtitle">Reviewer name</h5>
                         <h6>Date</h6>
@@ -103,7 +103,7 @@
                 <h4>Loved by Designers</h4>
                 <p>This template instantly leveled up our <br> presence.” – Studio Vertex</p>
                 <div class="tricky">
-                    <img class="control" src="/Assets/avatar.png" alt="">
+                    <img class="control" src="./Assets/avatar.png" alt="">
                     <div class="easy">
                         <h5 class="card-subtitle">Reviewer name</h5>
                         <h6>Date</h6>
@@ -118,6 +118,9 @@
             <button class="primary-color">Ger Started Free</button>
             <img src="Assets/wc-big.png" alt="">
         </div>
+        <section class="5">
+
+        </section>
     </main>
   </body>
 </html>
