a litt a bit codes are adding

--- a/index.html
+++ b/index.html
@@ -118,8 +118,21 @@
             <button class="primary-color">Ger Started Free</button>
             <img src="Assets/wc-big.png" alt="">
         </div>
-        <section class="5">
-
+        <section class="section5">
+            <div class="section5-tittle">
+                <h1>Let’s Get in <br> Touch</h1>
+            </div>
+            <div class="section5-form">
+                <form action="" class="form">
+                    <label for="Email">Email</label>
+                    <input type="email" placeholder="example@email.com">
+                    <label for="name">Name</label>
+                    <input type="name" placeholder="full name">
+                    <label for="Message">Message</label>
+                    <textarea name="" id="" cols="30" rows="10" placeholder="write your message"></textarea>
+                    <input class="primary-color full-width" type="button" value="Submit">
+                </form>
+            </div>
         </section>
     </main>
   </body>
